--- a/src/Services.css
+++ b/src/Services.css
@@ -5,6 +5,7 @@ h1.heading {
     font-weight: 700;
     margin-bottom: 10px;
 }
+
 p.heading.p__color {
     margin-bottom: 0;
     text-align: center;
@@ -45,9 +46,11 @@ p.service__text.p__color {
 h1.service__text {
     font-size: 19px;
     font-family: Poppins,sans-serif;
-    margin-left: 75px;
+    text-align: center;
     padding: 10px 0px;
+    align-items: center;
 }
+
 /* RESPONSIVE */
 @media only screen and (max-width: 1024px){
 .service__box {
